--- a/TheArchiveEngine/TheArchiveEngine.vcxproj
+++ b/TheArchiveEngine/TheArchiveEngine.vcxproj
@@ -83,7 +83,7 @@
       <AdditionalIncludeDirectories>src;vendor\spdlog\include;vendor\GLFW\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <DebugInformationFormat>EditAndContinue</DebugInformationFormat>
       <Optimization>Disabled</Optimization>
-      <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
+      <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
       <AdditionalOptions>/utf-8 %(AdditionalOptions)</AdditionalOptions>
       <LanguageStandard>stdcpp17</LanguageStandard>
       <ExternalWarningLevel>Level3</ExternalWarningLevel>
@@ -110,7 +110,7 @@
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <MinimalRebuild>false</MinimalRebuild>
       <StringPooling>true</StringPooling>
-      <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
+      <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
       <AdditionalOptions>/utf-8 %(AdditionalOptions)</AdditionalOptions>
       <LanguageStandard>stdcpp17</LanguageStandard>
       <ExternalWarningLevel>Level3</ExternalWarningLevel>
@@ -138,7 +138,7 @@
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <MinimalRebuild>false</MinimalRebuild>
       <StringPooling>true</StringPooling>
-      <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
+      <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
       <AdditionalOptions>/utf-8 %(AdditionalOptions)</AdditionalOptions>
       <LanguageStandard>stdcpp17</LanguageStandard>
       <ExternalWarningLevel>Level3</ExternalWarningLevel>
@@ -164,6 +164,8 @@
     <ClInclude Include="src\TheArchiveEngine\Events\Event.h" />
     <ClInclude Include="src\TheArchiveEngine\Events\KeyEvent.h" />
     <ClInclude Include="src\TheArchiveEngine\Events\MouseEvent.h" />
+    <ClInclude Include="src\TheArchiveEngine\Layer.h" />
+    <ClInclude Include="src\TheArchiveEngine\LayerStack.h" />
     <ClInclude Include="src\TheArchiveEngine\Log.h" />
     <ClInclude Include="src\TheArchiveEngine\Window.h" />
     <ClInclude Include="src\aepch.h" />
@@ -171,6 +173,8 @@
   <ItemGroup>
     <ClCompile Include="src\Platform\WindowsWindow.cpp" />
     <ClCompile Include="src\TheArchiveEngine\Application.cpp" />
+    <ClCompile Include="src\TheArchiveEngine\Layer.cpp" />
+    <ClCompile Include="src\TheArchiveEngine\LayerStack.cpp" />
     <ClCompile Include="src\TheArchiveEngine\Log.cpp" />
     <ClCompile Include="src\aepch.cpp">
       <PrecompiledHeader>Create</PrecompiledHeader>
