Hardcoded primary project and Modified Dependencies folder structure

--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -4,6 +4,22 @@ Size=400,400
 Collapsed=0
 
 [Window][ImGui Demo]
-Pos=177,32
+Pos=672,214
 Size=550,680
 Collapsed=0
+
+[Window][Example: Log]
+Pos=60,60
+Size=500,400
+Collapsed=0
+
+[Window][ImGui Metrics]
+Pos=60,60
+Size=402,234
+Collapsed=0
+
+[Window][Example: Auto-resizing window]
+Pos=60,60
+Size=652,437
+Collapsed=0
+
