--- a/TheArchiveEngine/TheArchiveEngine.vcxproj.filters
+++ b/TheArchiveEngine/TheArchiveEngine.vcxproj.filters
@@ -65,6 +65,8 @@
       <Filter>TheArchiveEngine</Filter>
     </ClInclude>
     <ClInclude Include="src\aepch.h" />
+    <ClInclude Include="src\TheArchiveEngine\Input.h" />
+    <ClInclude Include="src\Platform\Windows\WindowsInput.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Platform\OpenGL\ImGuiOpenGLRenderer.cpp">
@@ -89,5 +91,6 @@
       <Filter>TheArchiveEngine</Filter>
     </ClCompile>
     <ClCompile Include="src\aepch.cpp" />
+    <ClCompile Include="src\Platform\Windows\WindowsInput.cpp" />
   </ItemGroup>
 </Project>
